Fix subtitle alignment on welcome page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -119,8 +119,6 @@ ________________________________________________ */
   font-family: Montserrat, sans-serif;
   color: #17202a;
   text-align: center;
-  margin-left: 75px;
-  width: 95%;
 }
 
 .welcome-info {
